; ModuleID = '/home/carl/AnghaBench/git/extr_shallow.c_advertise_shallow_grafts_cb.c'
source_filename = "/home/carl/AnghaBench/git/extr_shallow.c_advertise_shallow_grafts_cb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.commit_graft = type { i32, i32 }

@.str = private unnamed_addr constant [12 x i8] c"shallow %s\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.commit_graft*, i8*)* @advertise_shallow_grafts_cb to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @advertise_shallow_grafts_cb(%struct.commit_graft* %0, i8* %1) #0 {
  %3 = alloca %struct.commit_graft*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  store %struct.commit_graft* %0, %struct.commit_graft** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = load i8*, i8** %4, align 8
  %7 = bitcast i8* %6 to i32*
  %8 = load i32, i32* %7, align 4
  store i32 %8, i32* %5, align 4
  %9 = load %struct.commit_graft*, %struct.commit_graft** %3, align 8
  %10 = getelementptr inbounds %struct.commit_graft, %struct.commit_graft* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = icmp eq i32 %11, -1
  br i1 %12, label %13, label %19

13:                                               ; preds = %2
  %14 = load i32, i32* %5, align 4
  %15 = load %struct.commit_graft*, %struct.commit_graft** %3, align 8
  %16 = getelementptr inbounds %struct.commit_graft, %struct.commit_graft* %15, i32 0, i32 1
  %17 = call i32 @oid_to_hex(i32* %16)
  %18 = call i32 @packet_write_fmt(i32 %14, i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str, i64 0, i64 0), i32 %17)
  br label %19

19:                                               ; preds = %13, %2
  ret i32 0
}

declare dso_local i32 @packet_write_fmt(i32, i8*, i32) #1

declare dso_local i32 @oid_to_hex(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
